<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/Word_Label_Display"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/Word_Label"
            android:textSize="16dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Word"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginBottom="15dip"
            android:text="Word"
            android:textSize="25dip"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/Description_Label_Display"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/Description_Label"
            android:textSize="16dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginBottom="15dip"
            android:lines="5" android:gravity="top|left" 
            android:inputType="textMultiLine"
			android:scrollHorizontally="false"
            android:textSize="25dip"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onEdit"
            android:text="@string/Button_Edit_Label" />

        <Button
            android:id="@+id/delete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onDelete"
            android:text="@string/Button_Delete_Label" />

        <Button
            android:id="@+id/exit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onExit"
            android:text="@string/Button_Exit_Label" />
        
    </LinearLayout>

</LinearLayout>